# TallerUnoDistribuidos

./: README.md  central.py  cliente.py  cliente2.py  server1.py  server3.py
primer taller/: central.py  server3.py
proyecto1/: Aspersor.py  Broker.py  Cloud.py  Fog.py  HealthCheck.py  SensorHumedad.py  SensorHumo.py  SensorTemperatura.py  consumer.py  fog_backup.py  main.py  producer.py  proxy.py  sensor.py  sistema_calidad.py
proyecto1/constants/: environment.py
proyecto1/files/: humedad.txt  humo.txt
segundo taller/codigo/: mensajes.proto
segundo taller/grpc-prueba-master/: README.md  pyproject.toml
segundo taller/grpc-prueba-master/src/: cliente.py  op1.py  op2.py  op3.py  server.py
segundo taller/grpc-prueba-master/src/constants/: environment.py
segundo taller/grpc-prueba-master/src/grpc_config/: client_pb2.py  client_pb2_grpc.py  op1_pb2.py  op1_pb2_grpc.py  op2_pb2.py  op2_pb2_grpc.py  op3_pb2.py  op3_pb2_grpc.py
segundo taller/grpc-prueba-master/src/protos/: client.proto  op1.proto  op2.proto  op2_pb2.py  op3.proto
tercer taller/: central.py  cliente.py  server1.py  server2.py  server3.py
test1/: Broker.py  Cloud.py  Fog.py  HealthCheck.py  SensorHumedad.py  demo.html  fog_backup.py  main.py  profile.html  profile.json  sensor.py
test1/constants/: environment.py
test2/: Aspersor.py  Fog.py
test2/files/: temperatura.txt
test3/: Cloud.py  SensorHumedad.py  SensorHumo.py  SensorTemperatura.py
test3/files/: humedad.txt
test_sensor_erroneo/: Cloud.py  Fog.py  HealthCheck.py  SensorErroneo.py  fog_backup.py  main.py  sistema_calidad.py
(+2 files in other folders)
